<resources>
    <string name="app_name">Barcodegrader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Abrir menú de navegación</string>
    <string name="drawer_close">Cerrar menú de navegación</string>

    <string name="maxGrade_csvLabel">Calificación máxima</string>

    <string name="nav_loadCsv">Administrar csv</string>
    <string name="nav_grade">Calificar alumnos</string>
    <string name="nav_createCodes">Crear códigos</string>
    <string name="nav_settings">Opciones</string>

    <string name="label_select_csv">Elija un fichero csv:</string>
    <string name="label_button_select_csv">Cargar fichero</string>
    <string name="label_filename">Nombre de archivo:</string>
    <string name="label_nStudents">Número de alumnos:</string>
    <string name="label_maxScore">Nota máxima:</string>
    <string name="info_default_noFile">(Ningún fichero cargado)</string>
    <string name="label_button_showCsv">Mostrar alumnos</string>
    <string name="label_button_saveCsv">Guardar cambios</string>
    <string name="alert_no_maxGrade_column">No se ha encontrado la columna de la calificación máxima. Revise el formato del fichero.</string>

    <string name="label_button_manualMode">Modo manual</string>
    <string name="label_button_autoMode">Modo automático</string>
    <string name="label_manualMode_description">En el modo manual, cada alumno se escanea y califica por separado.</string>
    <string name="label_autoMode_description">En el modo automático, los alumnos se escanean uno tras otro y se les asigna la nota máxima a cada uno.</string>

    <string name="alert_noCsv_text">El fichero elegido no es un csv</string>
    <string name="alert_fileNotFound">No se puede acceder al fichero elegido</string>
    <string name="alert_noFileLoad">Aún no se ha cargado ningún fichero csv</string>
    <string name="alert_fileSaved">Fichero guardado con éxito</string>

    <string name="title_activity_manual_mode">Modo Manual</string>
    <string name="label_button_scan_code">Escanear código</string>
    <string name="label_button_delete">Borrar nota</string>
    <string name="label_student_name">Nombre:</string>
    <string name="info_default_student_name">(Ningún alumno cargado)</string>
    <string name="label_student_email">e-mail:</string>
    <string name="info_default_student_email">(Ningún alumno cargado)</string>
    <string name="info_label_default_grade">Nota (máx. </string>
    <string name="alert_no_code">Fallo al leer el código</string>
    <string name="alert_student_not_found">Alumno no encontrado en el fichero</string>
    <string name="alert_student_not_loaded">No se ha escaneado ningún código</string>
    <string name="alert_max_grade">La nota máxima es </string>

    <string name="title_activity_auto_mode">Modo automático</string>
    <string name="label_button_auto_scan">Iniciar escáner</string>
    <string name="label_scanned_students">Alumnos calificados:</string>
    <string name="label_codes_not_found">Códigos no encontrados:</string>
    <string name="info_default_codes_not_found">(Ninguno)</string>
    <string name="alert_codes_not_found">Se han detectado códigos ausentes en el fichero csv.</string>

    <string name="title_activity_show_csv">Mostrar CSV</string>
    <string name="label_list_grade">Nota:  </string>
    <string name="label_list_name">Nombre: </string>
    <string name="label_list_email">Email: </string>

    <string name="label_createCodes_description">Genere los códigos necesarios para cada alumno a partir del archivo csv cargado.</string>
    <string name="label_createCodes_button">Guardar archivo de códigos</string>

    <string name="label_exit_title">¿Confirmar cierre?</string>
    <string name="label_exit_text">Los datos no guardados podrían perderse</string>

</resources>
