<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fragment_loadCsv"
            android:icon="@drawable/ic_action_folder_open"
            android:title="@string/nav_loadCsv"
            android:checked="true"/>
        <item
            android:id="@+id/nav_fragment_grade"
            android:icon="@drawable/ic_assignment_turned_in"
            android:title="@string/nav_grade" />
        <item
            android:id="@+id/nav_fragment_createCodes"
            android:icon="@drawable/ic_action_barcode_1"
            android:title="@string/nav_createCodes" />
        <item
            android:id="@+id/nav_fragment_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>