<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manual_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.i72jilej.barcodegrader.ManualModeActivity2"
    android:orientation="vertical">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/label_button_scan_code"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_student_name"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="@dimen/label_topMargin"/>
    <TextView
        android:id="@+id/info_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_default_student_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_student_email"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="@dimen/label_topMargin"/>
    <TextView
        android:id="@+id/info_student_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_default_student_email" />

    <TextView
        android:id="@+id/info_label_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_label_default_grade"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="@dimen/label_topMargin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_grade"
        />


</LinearLayout>
