<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.i72jilej.barcodegrader.LoadCsvFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_select_csv"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <Button
                android:id="@+id/button_loadCsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_select_csv"
                android:onClick="loadCsv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_filename"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:layout_marginTop="@dimen/label_topMargin"/>
            <TextView
                android:id="@+id/info_filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_default_noFile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nStudents"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:layout_marginTop="@dimen/label_topMargin"/>
            <TextView
                android:id="@+id/info_nStudents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_default_noFile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_maxScore"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:layout_marginTop="@dimen/label_topMargin"/>
            <TextView
                android:id="@+id/info_maxScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_default_noFile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_showCsv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_button_showCsv"
                    android:layout_marginTop="@dimen/label_topMargin"
                    android:layout_weight="0.5"
                    />
                <Button
                    android:id="@+id/button_saveCsv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_button_saveCsv"
                    android:layout_weight="0.5"
                    android:layout_marginTop="@dimen/label_topMargin"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
