<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.i72jilej.barcodegrader.GradeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button_manualMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_button_manualMode" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:text="@string/label_manualMode_description"/>
        <Button
            android:id="@+id/button_autoMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_topMargin"
            android:text="@string/label_button_autoMode"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:text="@string/label_autoMode_description"/>
    </LinearLayout>



</FrameLayout>
