<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.i72jilej.barcodegrader.ManualModeActivity"
    tools:showIn="@layout/activity_manual_mode"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/label_button_scan_code"
            android:onClick="manualScan"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_delete"
            android:onClick="deleteGrade"
            android:layout_weight="1"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_student_name"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="@dimen/label_topMargin"/>
    <TextView
        android:id="@+id/info_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_default_student_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_student_email"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="@dimen/label_topMargin"/>
    <TextView
        android:id="@+id/info_student_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_default_student_email" />

    <TextView
        android:id="@+id/info_label_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_label_default_grade"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="@dimen/label_topMargin"
        android:labelFor="@+id/edit_grade"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/edit_grade"
        android:imeOptions="actionDone"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_grade_0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_grade_1"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_grade_2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_grade_3"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_grade_4"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_grade_5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_grade_6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_grade_7"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_grade_8"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_grade_9"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_grade_10"/>
    </LinearLayout>




</LinearLayout>
